# IoT-Engineer-C-Test-Project

./: .gitignore  README.md
Doc/: IoT Engineer C Test Task report.docx
IoTEngCTestPrj/IoTEngCTestPrj/: CMakeLists.txt  IoTEngCTestPrj.sln  IoTEngCTestPrj.vgdbproj
IoTEngCTestPrj/IoTEngCTestPrj/main/: CMakeLists.txt  main.c
IoTEngCTestPrj/IoTEngCTestPrj/main/com/: cmdhandler.c  cmdhandler.h  encdec.c  encdec.h  pktformat.c  pktformat.h  pktreceive.c  pktreceive.h  pktsend.c  pktsend.h
IoTEngCTestPrj/IoTEngCTestPrj/main/gpio/: led.c  led.h
IoTEngCTestPrj/IoTEngCTestPrj/main/test/: comtest.c  comtest.h
